--- a/frontend/src/app/routes/user/user.component.html
+++ b/frontend/src/app/routes/user/user.component.html
@@ -1,1 +1,6 @@
-<p>user works!</p>
+<div>
+    <h2>Details - {{user.username}}</h2>
+    <div><span>id: </span>{{user.id}}</div>
+    <div><span>code: </span>{{user.code}}</div>
+    <div><span>email: </span>{{user.email}}</div>
+  </div>
