--- a/frontend/src/app/routes/home/home.component.html
+++ b/frontend/src/app/routes/home/home.component.html
@@ -9,7 +9,7 @@
                 <a routerLink="/login"><button mat-raised-button color="primary">Continuar teste</button></a>
             </div>
             <div class="example-button-row">
-                <a routerLink="/history"><button mat-raised-button color="accent">Ver resultado</button></a>
+                <a routerLink="/"><button mat-raised-button color="accent">Ver resultado</button></a>
             </div>
         </div>
     </div>
