--- a/frontend/src/app/routes/login/register/register.component.html
+++ b/frontend/src/app/routes/login/register/register.component.html
@@ -1,6 +1,6 @@
 <body>
     <div class="back">
-        <a routerLink="/login"><button mat-icon-button aria-label="Example icon button with a vertical three dot icon">
+        <a routerLink="../../"><button mat-icon-button aria-label="Example icon button with a vertical three dot icon">
             <mat-icon class="material-icons color_white">arrow_back_ios</mat-icon> 
         </button></a><br>            
     </div>
@@ -13,13 +13,12 @@
                     <div class="form">
                         <mat-form-field>
                             <mat-label>Username</mat-label>
-                            <input matInput name="username" ngModel required #username="ngModel">
-                            <mat-error *ngIf="username.invalid && username.touched">Por favor, insira um nome de usuário.</mat-error>
+                            <input matInput name="username" [(ngModel)]="user.username" #username="ngModel" required >
+                            <mat-error *ngIf="!user.username">Insira um nome de usuário.</mat-error>
                         </mat-form-field>
                         <mat-form-field>
                             <mat-label>Email</mat-label>
-                            <input matInput name="email" ngModel required email #email="ngModel">
-                            <mat-error *ngIf="email.invalid && email.touched">Por favor, insira um e-mail válido.</mat-error>
+                            <input matInput name="email"  [(ngModel)]="user.email" #email="ngModel">
                         </mat-form-field>
                         <section>
                             <div class="example-button-row">
