ir para proxima questao

--- a/frontend/src/app/routes/question/question.component.html
+++ b/frontend/src/app/routes/question/question.component.html
@@ -1,4 +1,4 @@
 <div class="question-container">
   <h2>{{statement.storyText}}</h2>
-
+  <button (click)="goToNextQuestion()">Ir para proxima Question</button>
 </div>
