--- a/frontend/src/app/routes/user/user.component.html
+++ b/frontend/src/app/routes/user/user.component.html
@@ -3,6 +3,6 @@
     <div><span>id: </span>{{user.id}}</div>
     <div><span>code: </span>{{user.code}}</div>
     <div><span>email: </span>{{user.email}}</div>
-    <button routerLink="/question">Ir para Question</button>
+    <button (click)="goToQuestion(1)">Ir para Question</button>
 
   </div>
