Inicial passagem de parâmetros de usuauio por roteamento

--- a/frontend/src/app/routes/user/user.component.html
+++ b/frontend/src/app/routes/user/user.component.html
@@ -1,8 +1,5 @@
-<div>
-    <h2>Details - {{user.username}}</h2>
-    <div><span>id: </span>{{user.id}}</div>
-    <div><span>code: </span>{{user.code}}</div>
-    <div><span>email: </span>{{user.email}}</div>
-    <button routerLink="/question">Ir para Question</button>
-
-  </div>
+<body>
+   <div class="welcome">
+      <h3>Bem vindo, {{this.user.username}}</h3>
+    </div>
+</body>
