--- a/frontend/src/app/routes/login/login.component.scss
+++ b/frontend/src/app/routes/login/login.component.scss
@@ -52,7 +52,7 @@ a {
   font-size: 11px;
   font-weight: bold;
   font-family: 'Modulus Pro';
-  margin-bottom: 15px;
+  margin-bottom: 20px;
 }
 
 p {
@@ -67,4 +67,8 @@ p {
 
 .material-icons.color_white {
   color: #FFFFFF
+}
+
+.example-button-row {
+  margin-top: 15px;
 }
