--- a/frontend/src/app/routes/user/user.component.scss
+++ b/frontend/src/app/routes/user/user.component.scss
@@ -7,19 +7,6 @@ body {
   height: 100vh;
 }
 
-mat-card {
-  height: 10px;
-  width: 50%;
-  padding: 20px;
-  overflow: auto;
-  position: relative;
-  background-color: rgba(255, 255, 255, 0.8);
-}
-
-.welcome {
-  margin: 50px 0px 0 30px;
-}
-
 /* top | right | bottom | left */
 h3 {
   color: #f2f3f2;
@@ -27,6 +14,51 @@ h3 {
   font-weight: bold;
   font-family: 'Modulus Pro';
   display: flex;
-  flex-direction: column;
+  justify-content: center;
   align-items: flex-start;
+  text-shadow: 0px 5px 10px rgba(0, 0, 0, 0.5);
+}
+
+.button-container {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  grid-template-rows: repeat(2, 1fr);
+  gap: 10px;
+  left: 50px;
+}
+
+.button-container button:nth-child(1) {
+  top: 100px;
+  left: 302px;
+}
+
+.button-container button:nth-child(2) {
+  top: 200px;
+  left: 170px;
+}
+
+.button-container button:nth-child(3) {
+  top: 310px;
+  left: 157px;
+}
+
+.button-container button:nth-child(4) {
+  top: 375px;
+  left: 250px;
+}
+
+.button-container button:nth-child(5) {
+  top: 450px;
+  left: 50px;
+}
+
+.button-container button:nth-child(6) {
+  top: 580px;
+  left: -5px;
+}
+
+.mat-raised-button {
+  padding: 10px;
+  margin: 5px;
+  box-shadow: 0 3px 1px -2px rgba(0, 0, 0, 0.2), 0 2px 2px 0 rgba(0, 0, 0, 0.14), 0 1px 5px 0 rgba(0, 0, 0);
 }
