endpoint option - pesquisa por statement_id

--- a/frontend/src/app/routes/user/user.component.html
+++ b/frontend/src/app/routes/user/user.component.html
@@ -5,12 +5,12 @@
     </div>
     <div class="button-container">
       <div class="button-container">
-         <button mat-raised-button class="btn6"><img src="assets/buttons/6.png" alt="6"></button>
-         <button mat-raised-button class="btn5"><img src="assets/buttons/5.png" alt="5"></button>
-         <button mat-raised-button class="btn4"><img src="assets/buttons/4.png" alt="4"></button>
-         <button mat-raised-button class="btn3"><img src="assets/buttons/3.png" alt="3"></button>
-         <button mat-raised-button class="btn2"><img src="assets/buttons/2.png" alt="2"></button>
-         <button mat-raised-button class="btn1"><img src="assets/buttons/1.png" alt="1"></button>
+         <button mat-raised-button class="btn6" (click)="goToLevel(6)"><img src="assets/buttons/6.png" alt="6"></button>
+         <button mat-raised-button class="btn5" (click)="goToLevel(5)"><img src="assets/buttons/5.png" alt="5"></button>
+         <button mat-raised-button class="btn4" (click)="goToLevel(4)"><img src="assets/buttons/4.png" alt="4"></button>
+         <button mat-raised-button class="btn3" (click)="goToLevel(3)"><img src="assets/buttons/3.png" alt="3"></button>
+         <button mat-raised-button class="btn2" (click)="goToLevel(2)"><img src="assets/buttons/2.png" alt="2"></button>
+         <button mat-raised-button class="btn1" (click)="goToLevel(1)"><img src="assets/buttons/1.png" alt="1"></button>
     </div>
   </div>
 </body>
