Adiciona "Como Jogar"

--- a/frontend/src/app/routes/user/info/info.component.html
+++ b/frontend/src/app/routes/user/info/info.component.html
@@ -1,20 +1,31 @@
 <mat-dialog-content class="mat-typography">
     <div class="content">
-        <p class="title">Bem vindo, {{this.user.username}}</p>
+        <h3 class="title">Bem vindo(a), {{this.user.username}}!</h3>
         <p class="p-content">
-            Raio Xcape é um jogo didático, no estilo Escape Room, que trata sobre assuntos de radiologia.
-            Desenvolvido como uma parceria entre a Universidade Federal de Santa Maria (UFSM) e a Associação
-            Gaúcha de Radiologia (AGR). Seu público-alvo são médicos residentes em radiologia, e o objetivo do
-            jogo é proporcionar uma experiência imersiva de formação na área para acadêmicos de medicina do
-            Rio Grande do Sul.
+            O UniVerse é um teste vocacional gamificado, que tem como objetivo ajudá-lo de forma lúdica e interativa a
+            descobrir a
+            melhor área ou curso que combina com seu perfil.
         </p>
-        
+        <p class="title">
+            Como jogar:
+        </p>
+        <p class="p-content">
+            O jogo contém seis fases, cada uma contendo suas perguntas e contextos. Para avançar, é necessário concluir
+            as fases
+            anteriores. Após ter jogado todas as fases, você receberá o resultado final, onde poderá conferir as
+            principais áreas
+            que combinam com seu perfil e uma lista de cursos de graduação da UFSM dessas respectivas áreas.
+        </p>
+        <p class="p-content">
+            Agora, aperte o cinto, mergulhe no mundo do UniVerse, onde você está em uma ilha repleta de desafios e
+            aventuras!
+        </p>
+        <p class="p-content">Bom Jogo!</p>
 
-        <p class="goodgame">Bom Jogo!</p>    
-    </div>
-    <mat-dialog-actions align="center">
         <div class="example-button-row">
-             <button mat-button mat-dialog-close style="background-color: #3C6A54;"><p class="btn">Começar</p></button>
+            <button mat-button mat-dialog-close style="background-color: #3C6A54;">
+                <p class="btn">Começar</p>
+            </button>
         </div>
-    </mat-dialog-actions>
+    </div>
 </mat-dialog-content>
