--- a/frontend/src/app/routes/user/info/info.component.scss
+++ b/frontend/src/app/routes/user/info/info.component.scss
@@ -2,10 +2,13 @@
     display: flex;
     flex-direction: column;
     text-align: center;
+    align-items: center;
 }
 
-p {
+.p-content {
     font-family: Modulus Pro;
+    font-size: 15px;
+    text-align: justify;
 }
 
 .title {
@@ -16,14 +19,15 @@ p {
     margin-top: 10px;
     color: white;
     font-family: Modulus Pro;
+    text-align: center;
+    
 }
 
-.example-button-row button,
-.example-button-row a {
-  margin-right: 8px;
-  height: 50%;
-  width: 130%;
-  font-size: 15px;
-  border-radius: 50px;
-  font-family: 'Modulus Pro', Tahoma, Geneva, Verdana, sans-serif;
+.example-button-row button{
+    height: 30%;
+    font-size: 15px;
+    border-radius: 50px;
+    font-family: 'Modulus Pro', Tahoma, Geneva, Verdana, sans-serif;
+    padding-left: 25px;
+    padding-right: 25px;
 }
