--- a/frontend/src/app/routes/home/home.component.html
+++ b/frontend/src/app/routes/home/home.component.html
@@ -1,15 +1,15 @@
 <body>
     <div class="container">
-        <img class="logo-img" alt="Universe" src="assets/img/logo.png" />
+        <img class="logo-img" alt="Universe" src="/assets/images/logo.png" />
         <div class="button-container">
             <div class="example-button-row">
-                <a routerLink="/tests/new"><button mat-raised-button color="primary">Iniciar novo teste</button></a>
+                <a routerLink="/test/new"><button mat-raised-button color="primary">Iniciar teste</button></a>
             </div>
             <div class="example-button-row">
-                <a routerLink="/tests/continue"><button mat-raised-button color="primary">Continuar teste</button></a>
+                <a routerLink="/test/continue"><button mat-raised-button color="primary">Continuar teste</button></a>
             </div>
             <div class="example-button-row">
-                <a routerLink="/tests/result"><button mat-raised-button color="accent">Ver resultado</button></a>
+                <a routerLink="/test/result"><button mat-raised-button color="accent">Ver resultado</button></a>
             </div>
         </div>
     </div>
