--- a/frontend/src/app/routes/home/home.component.scss
+++ b/frontend/src/app/routes/home/home.component.scss
@@ -13,7 +13,7 @@
 }
 
 body {
-  background-image: url('../../../assets/img/bkg/home-bkg.png');
+  background-image: url('/assets/images/backgrounds/home-background.png');
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
@@ -60,7 +60,7 @@ body {
 .info-label {
   color: #0b2447;
   font-size: 12px;
-  font-family: 'Helvetica';
+  font-family: 'Helvetica', sans-serif;
   margin-top: -2px;
   margin-bottom: 0;
 }
