--- a/frontend/src/app/routes/test/creation/test-creation.component.scss
+++ b/frontend/src/app/routes/test/creation/test-creation.component.scss
@@ -1,5 +1,5 @@
 body {
-  background-image: url('../../../../assets/img/bkg/home-bkg.png');
+  background-image: url('/assets/images/backgrounds/home-background.png');
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
@@ -16,7 +16,7 @@ mat-card {
   background-color: rgba(255, 255, 255, 0.8);
 }
 
-.container {
+.test-creation-container {
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -29,7 +29,7 @@ h2 {
   color: #13432c;
   font-size: 30px;
   font-weight: bold;
-  font-family: 'Modulus Pro';
+  font-family: 'Modulus Pro', sans-serif;
   margin-bottom: 15px;
   display: flex;
   flex-direction: column;
@@ -51,7 +51,7 @@ p {
   margin-bottom: -15px;
   color: #1b5c3d;
   font-size: 11px;
-  font-family: 'Modulus Pro';
+  font-family: 'Modulus Pro', sans-serif;
   display: flex;
   flex-direction: column;
   text-align: center;
@@ -61,7 +61,7 @@ a {
   color: #1b5c3d;
   font-size: 11px;
   font-weight: bold;
-  font-family: 'Modulus Pro';
+  font-family: 'Modulus Pro', sans-serif;
   margin-bottom: 15px;
 }
 
