--- a/frontend/src/app/routes/test/test.component.scss
+++ b/frontend/src/app/routes/test/test.component.scss
@@ -1,19 +1,5 @@
-.example-button-row button,
-.example-button-row a {
-  margin-right: 8px;
-  height: 60px;
-  width: 300px;
-  font-size: 15px;
-  border-radius: 50px;
-  font-family: 'Modulus Pro', Tahoma, Geneva, Verdana, sans-serif;
-}
-
-.example-disabled {
-  display: inline-block;
-}
-
 body {
-  background-image: url('../../../assets/img/bkg/home-bkg.png');
+  background-image: url('/assets/images/backgrounds/home-background');
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
@@ -21,52 +7,68 @@ body {
   height: 100vh;
 }
 
+mat-card {
+  width: 75%;
+  height: 60%;
+  padding: 20px;
+  overflow: auto;
+  position: relative;
+  background-color: rgba(255, 255, 255, 0.8);
+}
+
 .container {
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  height: 85vh;
+  height: 90%;
+  width: 100%;
 }
 
-.logo-img {
-  width: 90%;
-  margin-top: 0px;
-}
-
-.button-container {
-  display: flex;
-  flex-direction: column;
-  gap: 20px;
-}
-
-.material-symbols-outlined {
-  font-variation-settings: 'FILL' 0, 'wght' 300, 'GRAD' 0, 'opsz' 48;
-}
-
-.info {
-  display: flex;
-  justify-content: right;
-}
-
-.info-container {
+h2 {
+  color: #13432c;
+  font-size: 30px;
+  font-weight: bold;
+  font-family: 'Modulus Pro';
+  margin-bottom: 15px;
   display: flex;
   flex-direction: column;
   align-items: center;
-  cursor: pointer;
-  width: 100px;
 }
 
-.info-label {
-  color: #0b2447;
+.form {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+  padding: 10px;
+  height: 100%;
+  box-sizing: border-box;
+}
+
+a {
+  color: #1b5c3d;
+  font-size: 11px;
+  font-weight: bold;
+  font-family: 'Modulus Pro';
+  margin-bottom: 20px;
+}
+
+p {
+  margin-bottom: -15px;
+  color: #1b5c3d;
   font-size: 12px;
-  font-family: 'Helvetica';
-  margin-top: -2px;
-  margin-bottom: 0;
+  font-family: 'Modulus Pro';
+  display: flex;
+  flex-direction: column;
+  text-align: center;
 }
 
-.disclaimer {
-  font-style: italic;
-  color: #888;
-  margin-top: 4%;
+.material-icons.color_white {
+  color: #ffffff;
+}
+
+.example-button-row {
+  margin-top: 15px;
 }
