--- a/frontend/src/app/routes/personality/personality.component.html
+++ b/frontend/src/app/routes/personality/personality.component.html
@@ -1,26 +1,22 @@
 <body>
-  <div id="title">
-    <br>
-    <h3>Universe</h3>
-  </div>
-  <div id="personality-buttons-container">
-    <button mat-raised-button class="personality-button" id="personality-6-button" (click)="goToPersonality(6)">
-      <img src="/assets/images/personality-buttons/personality-6-button.png" alt="Personality 6">
-    </button>
-    <button mat-raised-button class="personality-button" id="personality-5-button" (click)="goToPersonality(5)">
-      <img src="/assets/images/personality-buttons/personality-5-button.png" alt="Personality 5">
-    </button>
-    <button mat-raised-button class="personality-button" id="personality-4-button" (click)="goToPersonality(4)">
-      <img src="/assets/images/personality-buttons/personality-4-button.png" alt="Personality 4">
-    </button>
-    <button mat-raised-button class="personality-button" id="personality-3-button" (click)="goToPersonality(3)">
-      <img src="/assets/images/personality-buttons/personality-3-button.png" alt="Personality 3">
-    </button>
-    <button mat-raised-button class="personality-button" id="personality-2-button" (click)="goToPersonality(2)">
-      <img src="/assets/images/personality-buttons/personality-2-button.png" alt="Personality 2">
-    </button>
-    <button mat-raised-button class="personality-button" id="personality-1-button" (click)="goToPersonality(1)">
-      <img src="/assets/images/personality-buttons/personality-1-button.png" alt="Personality 1">
-    </button>
-  </div>
+    <div id="personality-buttons">
+        <button class="personality-button" id="personality-6-button" (click)="goToPersonality(6)">
+            <img src="/assets/images/personality-buttons/personality-6-button.png" alt="Personality 6">
+        </button>
+        <button class="personality-button" id="personality-5-button" (click)="goToPersonality(5)">
+            <img src="/assets/images/personality-buttons/personality-5-button.png" alt="Personality 5">
+        </button>
+        <button class="personality-button" id="personality-4-button" (click)="goToPersonality(4)">
+            <img src="/assets/images/personality-buttons/personality-4-button.png" alt="Personality 4">
+        </button>
+        <button class="personality-button" id="personality-3-button" (click)="goToPersonality(3)">
+            <img src="/assets/images/personality-buttons/personality-3-button.png" alt="Personality 3">
+        </button>
+        <button class="personality-button" id="personality-2-button" (click)="goToPersonality(2)">
+            <img src="/assets/images/personality-buttons/personality-2-button.png" alt="Personality 2">
+        </button>
+        <button class="personality-button" id="personality-1-button" (click)="goToPersonality(1)">
+            <img src="/assets/images/personality-buttons/personality-1-button.png" alt="Personality 1">
+        </button>
+    </div>
 </body>
