--- a/frontend/src/app/routes/home/home.component.scss
+++ b/frontend/src/app/routes/home/home.component.scss
@@ -1,43 +1,53 @@
-.example-button-row button,
-.example-button-row a {
-  margin-right: 8px;
-  height: 60px;
-  width: 300px;
-  font-size: 15px;
-  border-radius: 50px;
-  font-family: 'Modulus Pro', Tahoma, Geneva, Verdana, sans-serif;
-}
-
-.example-disabled {
-  display: inline-block;
-}
-
 body {
-  background-image: url('/assets/images/backgrounds/home-background.png');
+  background-image: url('/assets/images/backgrounds/blurred-home-background.png');
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
   background-attachment: fixed;
+  font-family: 'Modulus Pro', sans-serif;
   height: 100vh;
+  width: 100vw;
 }
 
-.container {
+#container {
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  height: 85vh;
+  gap: 50px;
+  height: 100vh;
 }
 
-.logo-img {
-  width: 90%;
-  margin-top: 0px;
+#title {
+  color: #1C4A34;
+  font-family: 'Modulus Pro', sans-serif;
+  font-size: 200px;
+  font-weight: 600;
+  letter-spacing: 25px;
+  line-height: normal;
+  text-shadow: 1px 3px 5px rgba(0, 0, 0, 0.25);
 }
 
-.button-container {
+#buttons-container {
+  align-items: center;
   display: flex;
   flex-direction: column;
   gap: 20px;
+  justify-content: center;
+  text-align: center;
+}
+
+.button-container button,
+.button-container a {
+  height: 60px;
+  width: 300px;
+  font-size: 15px;
+  border-radius: 50px;
+  font-family: 'Modulus Pro', sans-serif;
+}
+
+.example-disabled {
+  display: inline-block;
 }
 
 .material-symbols-outlined {
@@ -69,4 +79,11 @@ body {
   font-style: italic;
   color: #888;
   margin-top: 4%;
+}
+
+@media only screen and (max-width: 600px) {
+  #title {
+    font-size: 65px;
+    letter-spacing: 5px;
+  }
 }
