--- a/frontend/src/app/routes/personality/personality.component.scss
+++ b/frontend/src/app/routes/personality/personality.component.scss
@@ -1,63 +1,60 @@
 body {
+  align-items: center;
   background-image: url('/assets/images/backgrounds/map-background.png');
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
   background-attachment: fixed;
-  height: 100vh;
-}
-
-h3 {
-  color: #f2f3f2;
-  font-size: 30px;
-  font-weight: bold;
-  font-family: 'Modulus Pro', sans-serif;
   display: flex;
+  font-family: 'Modulus Pro', sans-serif;
+  height: 100vh;
   justify-content: center;
-  align-items: flex-start;
-  text-shadow: 0px 5px 10px rgba(0, 0, 0, 0.5);
+  width: 100vw;
 }
 
-#personality-buttons-container {
+#personality-buttons {
   display: grid;
   grid-template-columns: repeat(3, 1fr);
   grid-template-rows: repeat(2, 1fr);
   gap: 10px;
-  left: 50px;
 }
 
 .personality-button {
-  padding: 10px;
-  margin: 5px;
-  box-shadow: 0 3px 1px -2px rgba(0, 0, 0, 0.2), 0 2px 2px 0 rgba(0, 0, 0, 0.14), 0 1px 5px 0 rgba(0, 0, 0);
+  background-color: transparent;
+  border: none !important;
+  cursor: pointer;
+  font-size: 0;
+  height: 67px;
+  position: absolute;
+  width: 93px;
 }
 
 #personality-6-button {
-  top: 100px;
   left: 302px;
+  top: 100px;
 }
 
 #personality-5-button {
-  top: 200px;
   left: 170px;
+  top: 200px;
 }
 
 #personality-4-button {
-  top: 310px;
   left: 157px;
+  top: 310px;
 }
 
 #personality-3-button {
-  top: 375px;
   left: 250px;
+  top: 375px;
 }
 
 #personality-2-button {
-  top: 450px;
   left: 50px;
+  top: 450px;
 }
 
 #personality-1-button {
-  top: 580px;
   left: -5px;
+  top: 580px;
 }
