--- a/frontend/src/app/routes/test/continuation/test-continuation.component.scss
+++ b/frontend/src/app/routes/test/continuation/test-continuation.component.scss
@@ -1,22 +1,16 @@
 body {
-  background-image: url('/assets/images/backgrounds/home-background.png');
+  background-image: url('/assets/images/backgrounds/blurred-home-background.png');
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
   background-attachment: fixed;
+  color: #13432c;
+  font-family: 'Modulus Pro', sans-serif;
   height: 100vh;
+  width: 100vw;
 }
 
-mat-card {
-  width: 75%;
-  height: 60%;
-  padding: 20px;
-  overflow: auto;
-  position: relative;
-  background-color: rgba(255, 255, 255, 0.8);
-}
-
-.container {
+#test-continuation-container {
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -25,18 +19,41 @@ mat-card {
   width: 100%;
 }
 
-h2 {
-  color: #13432c;
-  font-size: 30px;
-  font-weight: bold;
-  font-family: 'Modulus Pro';
-  margin-bottom: 15px;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
+#card {
+  width: 75%;
+  padding: 20px;
+  overflow: auto;
+  position: relative;
+  background-color: rgba(255, 255, 255, 0.8);
 }
 
-.form {
+#card-content {
+  align-items: center;
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+  justify-content: center;
+}
+
+#card-text {
+  align-items: center;
+  display: flex;
+  flex-direction: column;
+  gap: 25px;
+  justify-content: center;
+}
+
+#card-title {
+  font-size: 30px;
+  font-weight: bold;
+}
+
+#card-description {
+  font-size: 15px;
+  text-align: center;
+}
+
+#card-form {
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -45,30 +62,28 @@ h2 {
   padding: 10px;
   height: 100%;
   box-sizing: border-box;
+  gap: 10px;
+}
+
+.card-form-field-label,
+.card-form-field-input,
+.card-form-field-error-message {
+  font-family: 'Modulus Pro', sans-serif;
+}
+
+#card-form-submit-button {
+  font-family: 'Modulus Pro', sans-serif;
+  font-size: 15px;
 }
 
 a {
   color: #1b5c3d;
   font-size: 11px;
   font-weight: bold;
-  font-family: 'Modulus Pro';
-  margin-bottom: 20px;
-}
-
-p {
-  margin-bottom: -15px;
-  color: #1b5c3d;
-  font-size: 12px;
-  font-family: 'Modulus Pro';
-  display: flex;
-  flex-direction: column;
-  text-align: center;
+  font-family: 'Modulus Pro', sans-serif;
+  margin-bottom: 15px;
 }
 
 .material-icons.color_white {
   color: #ffffff;
-}
-
-.example-button-row {
-  margin-top: 15px;
 }
