--- a/frontend/src/app/routes/test/creation/test-creation.component.html
+++ b/frontend/src/app/routes/test/creation/test-creation.component.html
@@ -1,30 +1,67 @@
 <body>
     <div class="back">
-        <a routerLink="../../"><button mat-icon-button>
-            <mat-icon class="material-icons color_white">arrow_back_ios</mat-icon> 
-        </button></a><br>            
+        <a routerLink="../../">
+            <button mat-icon-button>
+                <mat-icon class="material-icons color_white">
+                    arrow_back_ios
+                </mat-icon> 
+            </button>
+        </a>
+        <br>            
     </div>
-    <div class="test-creation-container">
-        <mat-card>
-            <mat-card-content>
-                <h2>Iniciar teste</h2>
-                <p>Preencha as informações abaixo para iniciar um novo teste!</p>
-                <form #form="ngForm" (ngSubmit)="onSubmit(form)">
-                    <div class="form">
-                        <mat-form-field>
-                            <mat-label>Username</mat-label>
-                            <input matInput name="username" [(ngModel)]="testCreationDTO.username" #username="ngModel" required >
-                            <mat-error *ngIf="!testCreationDTO.username">Informe um username</mat-error>
+    <div id="test-creation-container">
+        <mat-card id="card">
+            <mat-card-content id="card-content">
+                <div id="card-text">
+                    <div id="card-title">
+                        Iniciar teste
+                    </div>
+                    <div id="card-description">
+                        Preencha o formulário abaixo para iniciar um novo teste!
+                    </div>
+                </div>
+                <form #form="ngForm" (ngSubmit)="onSubmit()">
+                    <div id="card-form">
+                        <mat-form-field class="card-form-field">
+                            <mat-label class="card-form-field-label">
+                                Username
+                            </mat-label>
+                            <input
+                                class="card-form-field-input"
+                                matInput
+                                name="username"
+                                [(ngModel)]="testCreationDTO.username"
+                                #username="ngModel"
+                                required
+                            >
+                            <mat-error
+                                class="card-form-field-error-message"
+                                *ngIf="!testCreationDTO.username || testCreationDTO.username.trim() === ''"
+                            >
+                                Informe um username
+                            </mat-error>
                         </mat-form-field>
-                        <mat-form-field>
-                            <mat-label>Email</mat-label>
-                            <input matInput name="email" [(ngModel)]="testCreationDTO.email" #email="ngModel">
+                        <mat-form-field class="card-form-field">
+                            <mat-label class="card-form-field-label">
+                                Email
+                            </mat-label>
+                            <input
+                                class="card-form-field-input"
+                                matInput
+                                name="email"
+                                [(ngModel)]="testCreationDTO.email"
+                                #email="ngModel"
+                            >
                         </mat-form-field>
-                        <section>
-                            <div class="example-button-row">
-                                <button mat-flat-button color="primary" type="submit" [disabled]="form.invalid">Iniciar teste</button>
-                            </div>
-                        </section>
+                        <button
+                            id="card-form-submit-button"
+                            mat-flat-button
+                            color="primary"
+                            type="submit"
+                            [disabled]="form.invalid"
+                        >
+                            Enviar
+                        </button>
                     </div>
                 </form>
             </mat-card-content>
