--- a/frontend/src/app/routes/test/test.component.scss
+++ b/frontend/src/app/routes/test/test.component.scss
@@ -1,5 +1,5 @@
 body {
-  background-image: url('/assets/images/backgrounds/home-background');
+  background-image: url('/assets/images/backgrounds/blurred-home-background');
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
@@ -29,7 +29,7 @@ h2 {
   color: #13432c;
   font-size: 30px;
   font-weight: bold;
-  font-family: 'Modulus Pro';
+  font-family: 'Modulus Pro', sans-serif;
   margin-bottom: 15px;
   display: flex;
   flex-direction: column;
@@ -51,7 +51,7 @@ a {
   color: #1b5c3d;
   font-size: 11px;
   font-weight: bold;
-  font-family: 'Modulus Pro';
+  font-family: 'Modulus Pro', sans-serif;
   margin-bottom: 20px;
 }
 
@@ -59,7 +59,7 @@ p {
   margin-bottom: -15px;
   color: #1b5c3d;
   font-size: 12px;
-  font-family: 'Modulus Pro';
+  font-family: 'Modulus Pro', sans-serif;
   display: flex;
   flex-direction: column;
   text-align: center;
