Corrige front e define visual das perguntas

--- a/frontend/src/app/routes/test/personality/personality.component.html
+++ b/frontend/src/app/routes/test/personality/personality.component.html
@@ -1,4 +1,14 @@
 <body>
+    <div class="back">
+        <a routerLink="/">
+            <button mat-icon-button>
+                <mat-icon class="material-icons color_white">
+                    arrow_back_ios
+                </mat-icon>
+            </button>
+        </a>
+        <br>
+    </div>
     <div id="personality-buttons">
         <button class="personality-button" id="personality-6-button" (click)="goToPersonality(6)">
             <img src="/assets/images/personality-buttons/personality-6-button.png" alt="Personality 6">
