--- a/frontend/src/app/routes/test/personality/personality.component.scss
+++ b/frontend/src/app/routes/test/personality/personality.component.scss
@@ -8,7 +8,6 @@ body {
   display: flex;
   font-family: 'Modulus Pro', sans-serif;
   height: 100vh;
-  justify-content: center;
   width: 100vw;
 }
 
@@ -57,4 +56,14 @@ body {
 #personality-1-button {
   left: -5px;
   top: 580px;
+}
+
+.material-icons.color_white {
+  color: #ffffff;
+}
+
+.back {
+  position: fixed;
+  top: 10px;
+  left: 10px;
 }
