Mostrar código do user

--- a/frontend/src/app/routes/test/info/test-info.component.html
+++ b/frontend/src/app/routes/test/info/test-info.component.html
@@ -21,7 +21,7 @@
         <div class="example-button-row">
             <button mat-button mat-dialog-close style="background-color: #3C6A54;">
                 <p class="btn">
-                    Iniciar
+                    Próximo
                 </p>
             </button>
         </div>
