Salva resposta do teste e termina de inserir imagens

--- a/frontend/src/app/routes/test/statement/statement.component.html
+++ b/frontend/src/app/routes/test/statement/statement.component.html
@@ -25,12 +25,12 @@
           <div class="example-button-row">
             <div class="example-flex-container">
               <div class="example-button-container">
-                <button mat-fab class="custom-button">
+                <button mat-fab class="custom-button" valeu="a" (click)="saveAnswer(1)">
                   <p class="button">A</p>
                 </button>
               </div>
               <div class="example-button-container">
-                <button mat-fab class="custom-button">
+                <button mat-fab class="custom-button" valeu="b" (click)="saveAnswer(2)">
                   <p class="button">B</p>
                 </button>
               </div>
