--- a/frontend/src/app/routes/test/statement/statement.component.html
+++ b/frontend/src/app/routes/test/statement/statement.component.html
@@ -47,4 +47,12 @@
 
     
   </div>
+  <div class="info">
+    <mat-card id="card2">
+        <mat-card-content>
+            <span class="bold">Username: </span><span>{{username}}</span><br>
+            <span class="bold">Code: </span><span>{{userCode}}</span>
+        </mat-card-content>
+    </mat-card>
+</div>
 </body>
