--- a/frontend/src/app/routes/test/personality/personality.component.html
+++ b/frontend/src/app/routes/test/personality/personality.component.html
@@ -29,4 +29,12 @@
             <img src="/assets/images/personality-buttons/personality-1-button.png" alt="Personality 1">
         </button>
     </div>
+    <div class="info">
+        <mat-card id="card">
+            <mat-card-content>
+                <span class="bold">Username: </span><span>{{username}}</span><br>
+                <span class="bold">Code: </span><span>{{usercode}}</span>
+            </mat-card-content>
+        </mat-card>
+    </div>
 </body>
