--- a/frontend/src/app/routes/test/personality/personality.component.html
+++ b/frontend/src/app/routes/test/personality/personality.component.html
@@ -10,22 +10,22 @@
         <br>
     </div>
     <div id="personality-buttons">
-        <button class="personality-button" id="personality-6-button" (click)="goToPersonality(6)">
+        <button class="personality-button" id="personality-6-button" (click)="goToPersonality(6)" [disabled]="completionStatus['C']">
             <img src="/assets/images/personality-buttons/personality-6-button.png" alt="Personality 6">
         </button>
-        <button class="personality-button" id="personality-5-button" (click)="goToPersonality(5)">
+        <button class="personality-button" id="personality-5-button" (click)="goToPersonality(5)" [disabled]="completionStatus['E']">
             <img src="/assets/images/personality-buttons/personality-5-button.png" alt="Personality 5">
         </button>
-        <button class="personality-button" id="personality-4-button" (click)="goToPersonality(4)">
+        <button class="personality-button" id="personality-4-button" (click)="goToPersonality(4)" [disabled]="completionStatus['S']">
             <img src="/assets/images/personality-buttons/personality-4-button.png" alt="Personality 4">
         </button>
-        <button class="personality-button" id="personality-3-button" (click)="goToPersonality(3)">
+        <button class="personality-button" id="personality-3-button" (click)="goToPersonality(3)" [disabled]="completionStatus['A']">
             <img src="/assets/images/personality-buttons/personality-3-button.png" alt="Personality 3">
         </button>
-        <button class="personality-button" id="personality-2-button" (click)="goToPersonality(2)">
+        <button class="personality-button" id="personality-2-button" (click)="goToPersonality(2)" [disabled]="completionStatus['I']">
             <img src="/assets/images/personality-buttons/personality-2-button.png" alt="Personality 2">
         </button>
-        <button class="personality-button" id="personality-1-button" (click)="goToPersonality(1)">
+        <button class="personality-button" id="personality-1-button" (click)="goToPersonality(1)" [disabled]="completionStatus['R']">
             <img src="/assets/images/personality-buttons/personality-1-button.png" alt="Personality 1">
         </button>
     </div>
