--- a/frontend/src/app/routes/test/personality/personality.component.html
+++ b/frontend/src/app/routes/test/personality/personality.component.html
@@ -10,23 +10,23 @@
         <br>
     </div>
     <div id="personality-buttons">
-        <button class="personality-button" id="personality-6-button" (click)="goToPersonality(6)" [disabled]="completionStatus['C']">
-            <img src="/assets/images/personality-buttons/personality-6-button.png" alt="Personality 6">
+        <button class="personality-button" id="personality-6-button" (click)="goToPersonality(6)" [disabled]="completionStatus['C']" [ngClass]="{'disabled-button': completionStatus['C']}">
+            <img [src]="completionStatus['C'] ? '/assets/images/personality-buttons/personality-6-button-disabled.png' : '/assets/images/personality-buttons/personality-6-button.png'" alt="Personality 6">
         </button>
-        <button class="personality-button" id="personality-5-button" (click)="goToPersonality(5)" [disabled]="completionStatus['E']">
-            <img src="/assets/images/personality-buttons/personality-5-button.png" alt="Personality 5">
+        <button class="personality-button" id="personality-5-button" (click)="goToPersonality(5)" [disabled]="completionStatus['E']" [ngClass]="{'disabled-button': completionStatus['E']}">
+            <img [src]="completionStatus['E'] ? '/assets/images/personality-buttons/personality-5-button-disabled.png' : '/assets/images/personality-buttons/personality-5-button.png'" alt="Personality 5">
         </button>
-        <button class="personality-button" id="personality-4-button" (click)="goToPersonality(4)" [disabled]="completionStatus['S']">
-            <img src="/assets/images/personality-buttons/personality-4-button.png" alt="Personality 4">
+        <button class="personality-button" id="personality-4-button" (click)="goToPersonality(4)" [disabled]="completionStatus['S']" [ngClass]="{'disabled-button': completionStatus['S']}">
+            <img [src]="completionStatus['S'] ? '/assets/images/personality-buttons/personality-4-button-disabled.png' : '/assets/images/personality-buttons/personality-4-button.png'" alt="Personality 4">
         </button>
-        <button class="personality-button" id="personality-3-button" (click)="goToPersonality(3)" [disabled]="completionStatus['A']">
-            <img src="/assets/images/personality-buttons/personality-3-button.png" alt="Personality 3">
+        <button class="personality-button" id="personality-3-button" (click)="goToPersonality(3)" [disabled]="completionStatus['A']" [ngClass]="{'disabled-button': completionStatus['A']}">
+            <img [src]="completionStatus['A'] ? '/assets/images/personality-buttons/personality-3-button-disabled.png' : '/assets/images/personality-buttons/personality-3-button.png'" alt="Personality 3">
         </button>
-        <button class="personality-button" id="personality-2-button" (click)="goToPersonality(2)" [disabled]="completionStatus['I']">
-            <img src="/assets/images/personality-buttons/personality-2-button.png" alt="Personality 2">
+        <button class="personality-button" id="personality-2-button" (click)="goToPersonality(2)" [disabled]="completionStatus['I']" [ngClass]="{'disabled-button': completionStatus['I']}">
+            <img [src]="completionStatus['I'] ? '/assets/images/personality-buttons/personality-2-button-disabled.png' : '/assets/images/personality-buttons/personality-2-button.png'" alt="Personality 2">
         </button>
-        <button class="personality-button" id="personality-1-button" (click)="goToPersonality(1)" [disabled]="completionStatus['R']">
-            <img src="/assets/images/personality-buttons/personality-1-button.png" alt="Personality 1">
+        <button class="personality-button" id="personality-1-button" (click)="goToPersonality(1)" [disabled]="completionStatus['R']" [ngClass]="{'disabled-button': completionStatus['R']}">
+            <img [src]="completionStatus['R'] ? '/assets/images/personality-buttons/personality-1-button-disabled.png' : '/assets/images/personality-buttons/personality-1-button.png'" alt="Personality 1">
         </button>
     </div>
     <div class="info">
