--- a/frontend/src/app/routes/test/personality/personality.component.scss
+++ b/frontend/src/app/routes/test/personality/personality.component.scss
@@ -87,3 +87,26 @@ body {
 #card{
   background-color: rgba(255, 255, 255, 0.6);
 }
+
+#title {
+  color: #ffffff;
+  font-family: 'Modulus Pro', sans-serif;
+  font-size: 50px;
+  font-weight: 600;
+  letter-spacing: 5px;
+  text-shadow: 1px 3px 5px rgba(48, 29, 29, 0.25);
+  text-align: center;
+  position: absolute;
+  margin-top: 10px;
+  top: 10px;
+  left: 50%;
+  transform: translateX(-50%);
+  width: 100%;
+}
+
+@media only screen and (max-width: 600px) {
+  #title {
+      font-size: 65px;
+      letter-spacing: 5px;
+  }
+}
