Ajeita imagens das questões

--- a/frontend/src/app/routes/test/personality/personality.component.html
+++ b/frontend/src/app/routes/test/personality/personality.component.html
@@ -36,7 +36,7 @@
         <mat-card id="card">
             <mat-card-content>
                 <span class="bold">Username: </span><span>{{username}}</span><br>
-                <span class="bold">Code: </span><span>{{usercode}}</span>
+                <span class="bold">Código: </span><span>{{usercode}}</span>
             </mat-card-content>
         </mat-card>
     </div>
