--- a/frontend/src/app/routes/test/statement/statement.component.html
+++ b/frontend/src/app/routes/test/statement/statement.component.html
@@ -27,12 +27,12 @@
           <div class="example-button-row">
             <div class="example-flex-container">
               <div class="example-button-container">
-                <button mat-fab class="custom-button" valeu="a" (click)="saveAnswer(1)">
+                <button mat-fab class="custom-button" valeu="a" (click)="handleButtonClick(1)">
                   <p class="button">A</p>
                 </button>
               </div>
               <div class="example-button-container">
-                <button mat-fab class="custom-button" valeu="b" (click)="saveAnswer(2)">
+                <button mat-fab class="custom-button" valeu="b" (click)="handleButtonClick(2)">
                   <p class="button">B</p>
                 </button>
               </div>
