--- a/frontend/src/app/routes/test/info-fase/info-fase.component.html
+++ b/frontend/src/app/routes/test/info-fase/info-fase.component.html
@@ -4,16 +4,16 @@
         <p class="p-content">
             Deseja continuar ou voltar ao menu anterior?
         </p>
-        <p class="p-content">
+        <p class="p-warning">
             Não se preocupe, seu progresso será salvo.
         </p>
         <div class="example-button-row">
-            <button mat-button mat-dialog-close style="background-color: #57a881;" (click)="goToPersonality()">
+            <button mat-button mat-dialog-close class="button" style="background-color: #57a881;" (click)="goToPersonality()">
                 <p class="btn">
                     Voltar
                 </p>
             </button>
-            <button mat-button mat-dialog-close style="background-color: #3C6A54;" (click)="continue()">
+            <button mat-button mat-dialog-close class="button" style="background-color: #3C6A54;" (click)="continue()">
                 <p class="btn">
                    Continuar
                 </p>
