--- a/frontend/src/app/routes/test/info-fase/info-fase.component.scss
+++ b/frontend/src/app/routes/test/info-fase/info-fase.component.scss
@@ -35,4 +35,14 @@
     padding-left: 25px;
     padding-right: 25px;
   }
+
+  .button {
+    margin-left: 5px;
+    margin-right: 5px;
+  }
+
+  .p-warning {
+    font-style: italic;
+    font-size: 10px;
+  }
   
