--- a/frontend/src/app/routes/test/info-alert/info-alert.component.html
+++ b/frontend/src/app/routes/test/info-alert/info-alert.component.html
@@ -5,7 +5,7 @@
             Tem certeza que deseja sair antes de concluir essa fase?
         </p>
         <p class="p-warning">
-            O progresso só salvo ao final de cada fase.
+            O progresso só será salvo ao final de cada fase.
         </p>
         <div class="example-button-row">
             <button mat-button mat-dialog-close class="button" style="background-color: #57a881;" (click)="goToPersonality()">
