tela buscar resultado

--- a/frontend/src/app/routes/home/home.component.html
+++ b/frontend/src/app/routes/home/home.component.html
@@ -19,7 +19,7 @@
                 </a>
             </div>
             <div class="button-container" id="test-result-button-container">
-                <a class="button-link" routerLink="/test/result">
+                <a class="button-link" routerLink="/test/code-result">
                     <button id="test-result-button" mat-raised-button color="accent">
                         Ver resultado
                     </button>
